analitzaplot: Fix 3D plots on the pinephone

It complains about the lack of precision on the float there whereas
elsewhere it doesn't. Adding the highp still works on other devices so
we have all bases covered.

BUG: 460239


(cherry picked from commit 2af6c7ddbd5d961dc0aefda0e08367fb2cf1d858)